--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,202 @@
 @import url(../styles/font.css);
+
+:root {
+    --footer-color: #091242;
+    --primary-text : #fff;
+}
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+}
+
+body {
+    font-family: "Krub";
+    font-weight: 400;
+}
+
+.container {
+    max-width: 980px;
+    margin: 0 auto;
+}
+
+.footer-1{
+    padding: 34px 0;
+    background-color: var(--footer-color);
+}
+
+.footer-1 .container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+}
+
+.footer-card {
+    display: flex;
+    align-items: center;
+    gap: 28px;
+}
+
+.footer-card-item {
+    display: flex;
+    align-items: center;
+    gap: 6px;
+}
+
+.primary-text {
+    color: var(--primary-text);
+    font-size: 14px;
+}
+
+.section-1 {
+    position: relative;
+    height: calc(100vh - 118px);
+    background-image: url(../assets/images/section1-bgi.png);
+    background-position: center;
+    background-size: cover;
+    margin-bottom: 60px;
+}
+
+.footer-2 {
+    position: relative;
+    background-color: rgba(0, 0, 0, 0.188);
+    padding: 18px 0;
+}
+
+.footer-2 .container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+nav {
+    display: flex;
+    align-items: center;
+    gap: 40px;
+}
+
+nav a {
+    font-weight: 600;
+    font-size: 16px;
+    color: var(--primary-text);
+    transition: all 0.3s ease;
+    cursor: pointer;
+}
+
+nav a:hover {
+    color: var(--footer-color);
+    transform: scale(1.05);
+}
+
+.nav-item {
+    display: flex;
+    align-items: center;
+    gap: 30px;
+}
+
+.social-links {
+    position: absolute;
+    right: 470px;
+    display: flex;
+    align-items: center;
+    gap: 15px;
+}
+
+.nav-item button {
+    position: absolute;
+    right: 250px;
+    padding:19px 40px;
+    border: none;
+    background-color: #fff;
+    cursor: pointer;
+    font-size: 16px;
+    font-weight:500;
+}
+
+.section-1 .title {
+    position: absolute;
+    top: 120px;
+}
+
+.s1-info {
+    display: inline;
+    padding: 2px 8px;
+    border-left: 4px solid  #dbbf06;
+    color: #fff;
+    background: rgba(4, 28, 55, 0.5);
+    font-family: "Rubik";
+    font-weight: 400;
+    font-size: 14px;
+    margin-bottom: 8px;
+}
+
+h1 {
+    color: #fff;
+    font-family: "Rubik";
+    font-weight: 700;
+    font-size: 50px;
+    margin-bottom: 5px;
+}
+
+.section-1 .primary-text {
+    margin-bottom: 20px;
+}
+
+.section-1 .secondary-btn {
+    padding: auto;
+    padding: 15px 38px;
+    border: none;
+    background-image: url(../assets/icons/bgc-btn.svg);
+    background-position: center;
+    background-size: cover;
+    font-family: "Krub";
+    font-weight: 600;
+    color: #23212A;
+    cursor: pointer;
+}
+
+.section-2 .container {
+    display: flex;
+    align-items: start;
+    gap: 80px;
+}
+
+.s2-title {
+    width: 90%;
+}
+
+.s2-cards {
+    display: flex;
+    align-items: start;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
+.s2-card {
+    display: flex;
+    align-items: start;
+    width: 44%;
+}
+
+.s2-card-title {
+    border-left: 1px solid #D8D8D8;
+    padding-left: 20px;
+}
+
+.s2-info {
+    background-color: #E8E8E8;
+    color: #1C1F35;
+    margin-bottom: 15px;
+}
+
+.s2-card h2 {
+    font-family: "Rubik";
+    font-weight: 600;
+    font-size: 28px;
+    margin-top: 15px;
+}
+
+
