--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,7 @@
 body {
     font-family: "Krub";
     font-weight: 400;
+    overflow-x: hidden;
 }
 
 .container {
@@ -403,3 +404,40 @@ h2 {
     flex-wrap: wrap;
     gap: 20px;
 }
+
+.section-8 .s8-footer {
+    padding: 110px 278px;
+    background-color: #091242;
+}
+
+.s8-footer-main {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 60px;
+}
+
+.main-input {
+    background-color: transparent;
+    border: 1px solid rgba(255, 255, 255, 0.2);
+    color: #fff;
+    font-family: "League Spartan";
+    font-size: 20px;
+    padding: 15px 0;
+    padding-left: 20px;
+    margin-bottom: 30px;
+    margin-right: 20px;
+}
+
+.your-m {
+    width: 570px;
+    height: 130px;
+    padding-left: 20px;
+    padding-top: 15px;
+    text-align: start;
+}
+
+.s8-footer .secondary-btn {
+    background: linear-gradient(127deg, #ffb629 0%, #ffda56 50.72%, #ffd7a6 100%);
+}
+
